haproxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: haproxy-ingress
  name: haproxy-ingress
  namespace: joe-test
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  ports:
  - name: port-http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: port-https
    port: 443
    protocol: TCP
    targetPort: 443
  - name: port-mgmt
    port: 1936
    protocol: TCP
    targetPort: 1936
  selector:
    run: haproxy-ingress
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: haproxy-ingress-api
  name: haproxy-ingress-api
  namespace: joe-test
spec:
  ports:
    - name: port-api
      port: 9999
      protocol: TCP
      targetPort: 9999
  selector:
    run: haproxy-ingress
