haproxy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app
  namespace: joe-test
  annotations:
    ingress.kubernetes.io/config-frontend: |
      http-response set-header Referrer-Policy strict-origin
spec:
  rules:
  - host: foo.bar
    http:
      paths:
      - path: /app1
        backend:
          serviceName: http-svc
          servicePort: 8080
      - path: /app1_conditional
        backend:
          serviceName: ingress-default-backend
          servicePort: 8080
      - path: /
        backend:
          serviceName: ingress-default-backend
          servicePort: 8080
      - path: /_conditional
        backend:
          serviceName: http-svc
          servicePort: 8080
